--- a/TipTap/Module/FirstDescript/TTFirstDescriptViewController.storyboard
+++ b/TipTap/Module/FirstDescript/TTFirstDescriptViewController.storyboard
@@ -9,6 +9,14 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="KoPub Dotum_Pro Bold.otf">
+            <string>KoPubDotumPB</string>
+        </array>
+        <array key="KoPub Dotum_Pro Light.otf">
+            <string>KoPubDotumPL</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Descript Main View Controller-->
         <scene sceneID="dFu-Wh-0a1">
@@ -24,8 +32,8 @@
                                 <color key="currentPageIndicatorTintColor" red="0.47843137254901957" green="0.78431372549019607" blue="0.73725490196078436" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </pageControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xaQ-0h-1xu">
-                                <rect key="frame" x="314" y="619" width="45" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <rect key="frame" x="313" y="620" width="46" height="27"/>
+                                <fontDescription key="fontDescription" name="KoPubDotumPB" family="KoPubDotum_Pro" pointSize="13"/>
                                 <state key="normal" title="다음으로">
                                     <color key="titleColor" red="0.47843137254901957" green="0.78431372549019607" blue="0.42352941176470588" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
@@ -34,7 +42,8 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDc-9D-ore">
-                                <rect key="frame" x="16" y="617" width="52" height="30"/>
+                                <rect key="frame" x="16" y="620" width="46" height="27"/>
+                                <fontDescription key="fontDescription" name="KoPubDotumPB" family="KoPubDotum_Pro" pointSize="13"/>
                                 <state key="normal" title="스킵하기">
                                     <color key="titleColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
@@ -87,14 +96,14 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘 하루 여행일기를 써보세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OTx-MT-b5R">
-                                <rect key="frame" x="85" y="430" width="205" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="102" y="430" width="171" height="15.5"/>
+                                <fontDescription key="fontDescription" name="KoPubDotumPB" family="KoPubDotum_Pro" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5SG-nQ-eTg">
-                                <rect key="frame" x="171" y="471" width="33" height="16"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <rect key="frame" x="172" y="465.5" width="31.5" height="14.5"/>
+                                <fontDescription key="fontDescription" name="KoPubDotumPL" family="KoPubDotum_Pro" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
