--- a/TipTap/Module/SharedDiary/View/SharedDiary.storyboard
+++ b/TipTap/Module/SharedDiary/View/SharedDiary.storyboard
@@ -56,7 +56,10 @@
                                                             <rect key="frame" x="109" y="586" width="141" height="32"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tyK-2P-Rce">
-                                                            <rect key="frame" x="10" y="330" width="29" height="13.5"/>
+                                                            <rect key="frame" x="-128" y="356" width="300" height="13.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="300" id="rNg-hN-0aU"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" name="KoPubDotumPL" family="KoPubDotum_Pro" pointSize="12"/>
                                                             <color key="textColor" red="0.42745098040000001" green="0.42745098040000001" blue="0.42745098040000001" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -70,25 +73,33 @@
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tjk-G7-OwD">
-                                                            <rect key="frame" x="21" y="113" width="1" height="146"/>
+                                                            <rect key="frame" x="21" y="60" width="1" height="146"/>
                                                             <color key="backgroundColor" red="0.42745098039215684" green="0.42745098039215684" blue="0.42745098039215684" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="146" id="nil-ZZ-i1U"/>
                                                                 <constraint firstAttribute="width" constant="1" id="w5l-H8-Y08"/>
                                                             </constraints>
                                                         </view>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아직 도착한 tiptap이 없어요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vd2-WN-guF">
+                                                            <rect key="frame" x="98.5" y="312" width="162" height="15.5"/>
+                                                            <fontDescription key="fontDescription" name="KoPubDotumPL" family="KoPubDotum_Pro" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <constraints>
-                                                        <constraint firstItem="Tjk-G7-OwD" firstAttribute="top" secondItem="NPJ-iD-caQ" secondAttribute="top" constant="113" id="1wv-lF-8z7"/>
+                                                        <constraint firstItem="Tjk-G7-OwD" firstAttribute="top" secondItem="NPJ-iD-caQ" secondAttribute="top" constant="60" id="1wv-lF-8z7"/>
                                                         <constraint firstItem="fNA-rd-Olh" firstAttribute="top" secondItem="NPJ-iD-caQ" secondAttribute="top" constant="8" id="3JE-PW-Jek"/>
                                                         <constraint firstAttribute="bottom" secondItem="bdE-Ag-BbT" secondAttribute="bottom" constant="21" id="4Vz-S2-qiR"/>
-                                                        <constraint firstItem="tyK-2P-Rce" firstAttribute="leading" secondItem="NPJ-iD-caQ" secondAttribute="leading" constant="10" id="9Fs-sa-lyn"/>
-                                                        <constraint firstItem="tyK-2P-Rce" firstAttribute="top" secondItem="NPJ-iD-caQ" secondAttribute="top" constant="330" id="CMy-ke-ptH"/>
+                                                        <constraint firstItem="tyK-2P-Rce" firstAttribute="leading" secondItem="NPJ-iD-caQ" secondAttribute="leading" constant="-128" id="9Fs-sa-lyn"/>
+                                                        <constraint firstItem="Vd2-WN-guF" firstAttribute="centerX" secondItem="NPJ-iD-caQ" secondAttribute="centerX" id="A3a-wR-mmo"/>
                                                         <constraint firstItem="Tjk-G7-OwD" firstAttribute="leading" secondItem="NPJ-iD-caQ" secondAttribute="leading" constant="21" id="GlG-J1-95D"/>
                                                         <constraint firstItem="bdE-Ag-BbT" firstAttribute="centerX" secondItem="NPJ-iD-caQ" secondAttribute="centerX" id="I8e-NT-KeB"/>
+                                                        <constraint firstItem="tyK-2P-Rce" firstAttribute="top" secondItem="Tjk-G7-OwD" secondAttribute="bottom" constant="150" id="Lud-zm-Pwd"/>
                                                         <constraint firstItem="fNA-rd-Olh" firstAttribute="leading" secondItem="NPJ-iD-caQ" secondAttribute="leading" constant="24" id="QgN-SG-K3J"/>
+                                                        <constraint firstItem="Vd2-WN-guF" firstAttribute="centerY" secondItem="NPJ-iD-caQ" secondAttribute="centerY" id="edU-wi-JXa"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -102,7 +113,9 @@
                                         </constraints>
                                         <size key="customSize" width="375" height="647"/>
                                         <connections>
+                                            <outlet property="emptyDescLabel" destination="Vd2-WN-guF" id="srb-Pb-pYM"/>
                                             <outlet property="locationLabel" destination="tyK-2P-Rce" id="ZaJ-zN-Ytz"/>
+                                            <outlet property="scrollImageView" destination="bdE-Ag-BbT" id="BnR-k2-vyk"/>
                                             <outlet property="view" destination="NPJ-iD-caQ" id="6oa-w6-PXd"/>
                                         </connections>
                                     </collectionViewCell>
@@ -114,7 +127,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XU-aO-ENz" userLabel="Container">
-                                                    <rect key="frame" x="16" y="28" width="359" height="172"/>
+                                                    <rect key="frame" x="16" y="20" width="359" height="188"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l0S-px-aEh" userLabel="bar">
                                                             <rect key="frame" x="0.0" y="9" width="17" height="1"/>
@@ -146,7 +159,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yir-jg-ddC" userLabel="Diary Body Label">
-                                                            <rect key="frame" x="75" y="48.5" width="233" height="63.5"/>
+                                                            <rect key="frame" x="75" y="48.5" width="233" height="79.5"/>
                                                             <fontDescription key="fontDescription" name="KoPubDotumPL" family="KoPubDotum_Pro" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
