--- a/TipTap/Login/TTLogin.storyboard
+++ b/TipTap/Login/TTLogin.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,33 +43,100 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TipTap Login View" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fd-9h-9bt">
-                                <rect key="frame" x="119" y="223.5" width="137.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.54509803921568623" green="0.54509803921568623" blue="0.54509803921568623" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KwE-8n-DJO" customClass="KOLoginButton">
-                                <rect key="frame" x="145.5" y="408.5" width="84" height="30"/>
-                                <state key="normal" title="LoginButton"/>
-                                <connections>
-                                    <action selector="pressedLoginButton:" destination="cMS-I7-9QV" eventType="touchUpInside" id="ijv-ug-P6m"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dfu-TG-gAA">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7rO-du-ZSk">
+                                        <rect key="frame" x="21" y="0.0" width="1" height="272"/>
+                                        <color key="backgroundColor" red="0.5450980392" green="0.5450980392" blue="0.5450980392" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="Jpd-ZN-Kdk"/>
+                                            <constraint firstAttribute="height" constant="272" id="Rtk-nl-Dhh"/>
+                                        </constraints>
+                                    </view>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="introFirstImage" translatesAutoresizingMaskIntoConstraints="NO" id="Dkh-Z8-wxZ">
+                                        <rect key="frame" x="0.0" y="135" width="94" height="107"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="94" id="UuZ-RD-4Mt"/>
+                                            <constraint firstAttribute="height" constant="107" id="sSJ-NB-E9y"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="introSecond" translatesAutoresizingMaskIntoConstraints="NO" id="75a-Tw-SVR">
+                                        <rect key="frame" x="215" y="0.0" width="160" height="167"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="167" id="KU5-4h-ko6"/>
+                                            <constraint firstAttribute="width" constant="160" id="eaP-jr-Pga"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="introThird" translatesAutoresizingMaskIntoConstraints="NO" id="NPE-RH-LgA">
+                                        <rect key="frame" x="226" y="293" width="109" height="117"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="117" id="4fg-zA-QFj"/>
+                                            <constraint firstAttribute="width" constant="109" id="QfN-1r-sgb"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="introLogo" translatesAutoresizingMaskIntoConstraints="NO" id="eW8-f2-xOv">
+                                        <rect key="frame" x="20" y="430" width="144" height="45"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KwE-8n-DJO" customClass="KOLoginButton">
+                                        <rect key="frame" x="32" y="557" width="311" height="51"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="311" id="il8-VR-x8d"/>
+                                            <constraint firstAttribute="height" constant="51" id="uCV-1B-gOL"/>
+                                        </constraints>
+                                        <state key="normal" title="LoginButton"/>
+                                        <connections>
+                                            <action selector="pressedLoginButton:" destination="cMS-I7-9QV" eventType="touchUpInside" id="ijv-ug-P6m"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY TRIP DIARY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJ2-2y-Hdc">
+                                        <rect key="frame" x="-25" y="322" width="93.5" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" red="0.42745098039215684" green="0.42745098039215684" blue="0.42745098039215684" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="75a-Tw-SVR" secondAttribute="trailing" id="0GA-xp-1KC"/>
+                                    <constraint firstItem="eW8-f2-xOv" firstAttribute="leading" secondItem="dfu-TG-gAA" secondAttribute="leading" constant="20" id="1T5-xh-sAD"/>
+                                    <constraint firstAttribute="bottom" secondItem="KwE-8n-DJO" secondAttribute="bottom" constant="59" id="4av-pA-3ko"/>
+                                    <constraint firstItem="Dkh-Z8-wxZ" firstAttribute="leading" secondItem="dfu-TG-gAA" secondAttribute="leading" id="6MG-Tp-IWS"/>
+                                    <constraint firstItem="7rO-du-ZSk" firstAttribute="top" secondItem="dfu-TG-gAA" secondAttribute="top" id="7yn-h2-KLB"/>
+                                    <constraint firstItem="Dkh-Z8-wxZ" firstAttribute="top" secondItem="dfu-TG-gAA" secondAttribute="top" constant="135" id="8DI-5T-gw6"/>
+                                    <constraint firstItem="JJ2-2y-Hdc" firstAttribute="top" secondItem="7rO-du-ZSk" secondAttribute="bottom" constant="50" id="Mef-R5-98h"/>
+                                    <constraint firstItem="KwE-8n-DJO" firstAttribute="centerX" secondItem="dfu-TG-gAA" secondAttribute="centerX" id="ZS3-PW-EfP"/>
+                                    <constraint firstItem="75a-Tw-SVR" firstAttribute="top" secondItem="dfu-TG-gAA" secondAttribute="top" id="ge1-Wn-FXc"/>
+                                    <constraint firstAttribute="trailing" secondItem="NPE-RH-LgA" secondAttribute="trailing" constant="40" id="nSK-HZ-Mvt"/>
+                                    <constraint firstAttribute="bottom" secondItem="eW8-f2-xOv" secondAttribute="bottom" constant="192" id="odi-PQ-iB3"/>
+                                    <constraint firstItem="7rO-du-ZSk" firstAttribute="leading" secondItem="dfu-TG-gAA" secondAttribute="leading" constant="21" id="qSe-Db-xxj"/>
+                                    <constraint firstItem="JJ2-2y-Hdc" firstAttribute="leading" secondItem="dfu-TG-gAA" secondAttribute="leading" constant="-25" id="sSq-I2-gXi"/>
+                                    <constraint firstItem="NPE-RH-LgA" firstAttribute="bottom" secondItem="eW8-f2-xOv" secondAttribute="top" constant="-20" id="shA-Vy-JrN"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="3fd-9h-9bt" firstAttribute="centerX" secondItem="wKc-bO-DI7" secondAttribute="centerX" id="5Oa-ga-BeO"/>
-                            <constraint firstItem="KwE-8n-DJO" firstAttribute="centerX" secondItem="wKc-bO-DI7" secondAttribute="centerX" id="Uki-No-Sar"/>
-                            <constraint firstItem="KwE-8n-DJO" firstAttribute="centerY" secondItem="wKc-bO-DI7" secondAttribute="centerY" constant="90" id="Zto-pA-e40"/>
-                            <constraint firstItem="3fd-9h-9bt" firstAttribute="centerY" secondItem="wKc-bO-DI7" secondAttribute="centerY" constant="-100" id="hsr-WF-j39"/>
+                            <constraint firstItem="WDa-5y-9pX" firstAttribute="trailing" secondItem="dfu-TG-gAA" secondAttribute="trailing" id="0qj-ml-jT6"/>
+                            <constraint firstItem="dfu-TG-gAA" firstAttribute="top" secondItem="wKc-bO-DI7" secondAttribute="top" id="18f-pA-jMM"/>
+                            <constraint firstItem="dfu-TG-gAA" firstAttribute="leading" secondItem="wKc-bO-DI7" secondAttribute="leading" id="ByT-9J-YXW"/>
+                            <constraint firstItem="WDa-5y-9pX" firstAttribute="bottom" secondItem="dfu-TG-gAA" secondAttribute="bottom" id="i3y-os-tNh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WDa-5y-9pX"/>
                     </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="JJ2-2y-Hdc" id="JRV-5n-PHY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5vg-DH-ztT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-10" y="27"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="introFirstImage" width="94" height="107"/>
+        <image name="introLogo" width="144" height="45"/>
+        <image name="introSecond" width="167" height="160"/>
+        <image name="introThird" width="109" height="117"/>
+    </resources>
 </document>
